--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -10,6 +10,8 @@
 body {
     font-family: "Poppins", sans-serif;
     color: #fff;
+    background-color: #2f303a;
+    font-size: 1.2rem;
 }
 a {
     text-decoration: none;
