--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,58 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");*,*:before,*:after{box-sizing:border-box;margin:0;padding:0}body{font-family:"Poppins", sans-serif;color:#fff}a{text-decoration:none;color:#fff}ul{list-style:none}img{max-width:100%;height:auto}
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+body {
+    font-family: "Poppins", sans-serif;
+    color: #fff;
+    background-color: #2f303a;
+    font-size: 1.2rem;
+}
+a {
+    text-decoration: none;
+    color: #fff;
+}
+ul {
+    list-style: none;
+}
+img {
+    max-width: 100%;
+    height: auto;
+}
+.full-height-grow {
+    display: flex;
+    flex-direction: column;
+}
+.container {
+    max-width: 75rem;
+    margin: 0 auto;
+    padding: 0 40px;
+}
+.main-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 6rem;
+}
+.main-header .brand-logo {
+    display: flex;
+    align-items: center;
+    font-size: 1.25em;
+}
+.main-header .brand-logo .brand-logo-name {
+    margin-left: 1rem;
+}
+.main-header .main-nav ul {
+    display: flex;
+}
+.main-header .main-nav ul a {
+    font-size: 0.9em;
+    padding-left: 1.5rem;
+}
+.main-header .main-nav ul a:hover {
+    color: #adadad;
+}
