landing page done

--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -12,6 +12,7 @@ body {
     color: #fff;
     background-color: #2f303a;
     font-size: 1.2rem;
+    min-height: 100vh;
 }
 a {
     text-decoration: none;
