--- a/scss/style.scss
+++ b/scss/style.scss
@@ -43,3 +43,31 @@
         }
     }
 }
+
+//! CTA
+.title {
+    font-weight: 500;
+    font-size: 2.5em;
+    margin-bottom: 1rem;
+}
+
+.subtitle {
+    font-weight: 500;
+    font-size: 1.2em;
+    margin-bottom: 2rem;
+}
+
+.btn {
+    background-color: #2367a6;
+    padding: 0.75rem 1.5rem;
+    border-radius: 1.2rem;
+    font-size: 0.9rem;
+
+    &:hover {
+        background-color: #2180d8;
+    }
+
+    &:focus {
+        background-color: #2796ff;
+    }
+}
