--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,6 +63,9 @@
     padding: 0.75rem 1.5rem;
     border-radius: 1.2rem;
     font-size: 0.9rem;
+    border: none;
+    outline: none;
+    color: #fff;
 
     &:hover {
         background-color: #2180d8;
@@ -78,13 +81,12 @@
     background-color: #202027;
     height: 4.4rem;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     font-weight: bold;
 
     .container {
         display: flex;
         justify-content: space-between;
+        align-items: center;
     }
 
     .footer-nav {
@@ -103,9 +105,49 @@
             .social-link {
                 img {
                     width: 0.9em;
-                    margin-right: .25rem;
+                    margin-right: 0.25rem;
                 }
             }
         }
     }
+}
+
+
+.circle-1 {
+    position: absolute;
+    width: 15vw;
+    height: 15vw;
+    border-radius: 50%;
+    background-color: rgba(188, 58, 128, 0.1);
+    bottom: 5vw;
+    left: 5vw;
+    z-index: -1;
+}
+.circle-2 {
+    position: absolute;
+    width: 12vw;
+    height: 12vw;
+    border-radius: 50%;
+    background-color: rgba(35, 103, 166, 0.1);
+    top: 5vw;
+    left: 40vw;
+    z-index: -1;
+}
+.circle-3 {
+    position: absolute;
+    width: 25vw;
+    height: 25vw; 
+    bottom: 0vw;
+    right: 0vw;
+    z-index: -1;
+    overflow: hidden;
+}
+.circle-3::before {
+    content: "";
+    background-color: rgba(35, 103, 166, 0.1);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    transform: translate(40%, 40%);
 }
